Update on index file.
changing to querySelector from getElementById

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <script>
         // javascript code to create pre loader for your website
         window.onload = function() {
-            document.getElementById('main-div').style.display = 'block';
-            document.getElementById('preloader').style.display = 'none';
+            document.querySelector('#main-div').style.display = 'block';
+            document.querySelector('#preloader').style.display = 'none';
         }
     </script>
     <style>
